--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,28 @@
-/* styles.css */
 body {
+  background-color: #fff;
   font-family: "Roboto", sans-serif;
   color: #434455;
-  background-color: #fff;
-}
-
-ul,
-ol {
-  list-style-type: none;
+  line-height: 1.5;
 }
 
 a {
   text-decoration: none;
+  color: #2e2f42;
 }
 
-.logo {
+ul {
+  list-style-type: none;
+}
+
+h2,
+h3 {
+  color: #2e2f42;
+}
+
+/* Header */
+
+.header-logo-link,
+.footer-logo-link {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -24,20 +32,26 @@ a {
   color: #4d5ae5;
 }
 
-.header-logo .logo-part {
+.header-logo-title {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
   color: #2e2f42;
 }
 
-.footer-logo .logo-part {
-  color: #f4f4fd;
-}
-
-.nav-link {
+.navigation-list-link {
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+}
+
+.navigation-list-link:hover,
+.navigation-list-link:focus {
+  color: #404bbf;
 }
 
 .contacts {
@@ -45,41 +59,139 @@ a {
 }
 
 .contacts-link {
+  font-weight: 400;
   font-size: 16px;
-  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
 
-.nav-link:hover,
-.nav-link:focus,
 .contacts-link:hover,
 .contacts-link:focus {
   color: #404bbf;
 }
 
-.page-footer {
+/* Section 1 */
+
+.topic {
   background-color: #2e2f42;
 }
 
-.title {
-  font-size: 36px;
+.topic-title {
   font-weight: 700;
-  line-height: 1.2;
-  color: #2e2f42;
-}
-
-.button-order {
-  font-size: 16px;
-  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
   color: #fff;
-  background-color: #4d5ae5;
-  border: none;
-  padding: 10px 20px;
-  cursor: pointer;
+  text-align: center;
 }
 
-.button-order:hover,
-.button-order:focus {
+.button {
+  background-color: #4d5ae5;
+  cursor: pointer;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  color: #fff;
+  line-height: 1.5;
+}
+
+.button:hover,
+.button:focus {
   background-color: #404bbf;
+}
+
+/* Section 2 */
+
+.advantages-title {
+  visibility: hidden;
+}
+
+.advantages-item-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+.advantages-item-content {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+/* Section 3 */
+
+.team {
+  background: #f4f4fd;
+}
+
+.team-title {
+  text-transform: capitalize;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+}
+
+.team-member {
+  background: #fff;
+}
+
+.team-member-name {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+.team-member-position {
+  font-size: 16px;
+  letter-spacing: 0.02em;
+}
+
+/* Section 4 */
+
+.portfolio-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  text-align: center;
+}
+
+.portfolio-item-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+.portfolio-item-content {
+  font-size: 16px;
+  letter-spacing: 0.02em;
+}
+
+/* Footer */
+
+.footer-container {
+  background: #2e2f42;
+}
+
+.footer-logo-title {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #f4f4fd;
+}
+
+.footer-content {
+  font-size: 16px;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
 }
